Finished chapter 2 & chapter 3

--- a/head_first_design_pattern/2.observer.md
+++ b/head_first_design_pattern/2.observer.md
@@ -23,48 +23,6 @@ The three players in the system are:
 - create an app that uses `WeatherData` object to update displays for current conditions, weather stats and forecasts.
 - The system must be expandable.
 
-```mermaid
-classDiagram
-    direction LR
-    class Subject {
-        + registerObserver()
-        + removeObserver()
-        + notifyObservers()
-    }
-    class Observer {
-        + update(temp, hum, pressure)
-    }
-    class DisplayElement {
-        + display()
-    }
-
-    class WeatherData {
-        - temperature
-        - humidity
-        - pressure
-        + measurementsChanged()
-        --
-        + getTemperature()
-        + getHumidity()
-        + getPressure()
-    }
-
-    class ConcreteDisplay {
-        + update()
-        + display()
-    }
-
-    WeatherData <|-- Subject : implements
-    Observer <|-- ConcreteDisplay : implements
-    DisplayElement <|-- ConcreteDisplay : implements
-
-    WeatherData "1" -- "*" Observer : notifies
-
-    note for ConcreteDisplay "Includes:\n- CurrentConditionsDisplay\n- StatisticsDisplay\n- ForecastDisplay"
-
-    note for WeatherData "Subject that holds state"
-```
-
 ### The `WeatherData` class
 
 ```mermaid
@@ -110,3 +68,50 @@ This book makes a clean analogy to magazine subscription
 - Publisher remain publishing.
 
 Publishers + Subscribers = Observer Pattern
+
+- Observer patterns defines a 1-many relationship between a set of objects so that when state of 1 object changes all of it dependents are notified
+- The objects remain loosely coupled
+
+Implementing the weather app with Observer pattern:
+
+```mermaid
+classDiagram
+    direction LR
+    class Subject {
+        + registerObserver()
+        + removeObserver()
+        + notifyObservers()
+    }
+    class Observer {
+        + update(temp, hum, pressure)
+    }
+    class DisplayElement {
+        + display()
+    }
+
+    class WeatherData {
+        - temperature
+        - humidity
+        - pressure
+        + measurementsChanged()
+        --
+        + getTemperature()
+        + getHumidity()
+        + getPressure()
+    }
+
+    class ConcreteDisplay {
+        + update()
+        + display()
+    }
+
+    WeatherData <|-- Subject : implements
+    Observer <|-- ConcreteDisplay : implements
+    DisplayElement <|-- ConcreteDisplay : implements
+
+    WeatherData "1" -- "*" Observer : notifies
+
+    note for ConcreteDisplay "Includes:\n- CurrentConditionsDisplay\n- StatisticsDisplay\n- ForecastDisplay"
+
+    note for WeatherData "Subject that holds state"
+```
