--- a/head_first_design_pattern/0.oo-design-principle.md
+++ b/head_first_design_pattern/0.oo-design-principle.md
@@ -1,4 +1,6 @@
-# Object oriented design priciples
+<!-- markdownlint-disable MD013-->
+
+# Object oriented design principles
 
 This book focus on design pattern, but each chapter mentions at least 1 object oriented design principle
 
@@ -32,7 +34,7 @@ Dog dog = new Dog();
 
 - The open-closed principle
   - Object should be open for extension but closed for modification of already established logic
-  - Makes the object both resilient to changes and flexible enough take on new responsiblity
+  - Makes the object both resilient to changes and flexible enough take on new responsibilities
 
 ## Chapter 4
 
