--- a/head_first_design_pattern/6.command.md
+++ b/head_first_design_pattern/6.command.md
@@ -156,3 +156,27 @@ classDiagram
 Or you can see the code example [examples/commandPattern.java](./examples/commandPattern.java)
 
 As you can see we have the undo method in the command interface as well, with which we can revert the changes we made through the last (few) command(s) by implementing receiver objects with state and/or a history stacks.
+
+### Macro command
+
+Macro command is a concrete command class that execute a series of command in order. By itself, it is viewed as a command object like normal
+
+```java
+public class MacroCommand implements Command {
+  Command[] commands;
+  public MacroCommand(Command[] commands) {
+    this.commands = commands;
+  }
+  public void execute() {
+    for (int i = 0; i < commands.length; i++) {
+      commands[i].execute();
+    }
+  }
+}
+```
+
+### Queueing and Logging requests
+
+Since command pattern package the computation request into an object and as it around as first-class object, we can use queue, delay invocation long after client application creates the command object. In fact as long as we have the command object intact, it can be invoke by a different thread, or another instance of the application living in another server for that matter.
+
+We can further improve our pattern by add 2 method: `store()` and `load()`. We can use object serialization to implement those methods. As we execute command, we store a history of them on the disk. When a crash occurs, we reload the command objects and invoke their `execute()` method in batches and in order. This is very similar to how DBMS has their operation logs where they store operation that has been executed, instead of state of the database. This also help with restoring certain checkpoint easier by executing changes instead of probing for states.
