--- a/head_first_design_pattern/0.oo-design-principle.md
+++ b/head_first_design_pattern/0.oo-design-principle.md
@@ -38,7 +38,13 @@ Dog dog = new Dog();
 
 ## Chapter 4
 
-- Dependency inversion.Depend upon abstractions; do not depend upon a concrete class.
+- Dependency inversion. Depend upon abstractions; do not depend upon a concrete class.
   - No variable should hold a reference to a concrete class. (Use a factory to get around using new).
   - No class should derive from a concrete class. (Derive from an interface or abstract class).
   - No method should override an implemented method of any of its base classes. (If you override an implemented method, the base class wasn't really an abstraction).
+
+## Chapter 7
+
+- The Hollywood principle.
+  - We allow low-level components to hook themselves into a system, but the high-level components determine when they are needed and used. With this we reduced dependency on high-level components while still allow for expression and control
+  - Don't call me, I'll call you
