Added chapter 7 facade and chapter 9 iterator

--- a/head_first_design_pattern/0.oo-design-principle.md
+++ b/head_first_design_pattern/0.oo-design-principle.md
@@ -45,6 +45,19 @@ Dog dog = new Dog();
 
 ## Chapter 7
 
+Principle of least knowledge: talk only to your immediate friends
+
+- When you design a system, for any object, be careful of the number of classes it interacts with and also how it comes to interact with those class
+- Avoid too much dependency between classes => prevent a fragile system
+
+## Chapter 8
+
 - The Hollywood principle.
   - We allow low-level components to hook themselves into a system, but the high-level components determine when they are needed and used. With this we reduced dependency on high-level components while still allow for expression and control
   - Don't call me, I'll call you
+
+## Chapter 9
+
+- Single Responsibility principle
+  - A class should only be in charge of 1 single responsibility
+  - A class should have only one reason to change
